draft home, about, top dishes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Expires" content="0" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CHiM LiBRARY</title>
+  <title>Thai Tai Eatery</title>
 
   <!-- Google Fonts -->
 
@@ -21,7 +21,81 @@
 </head>
 
 <body>
-  
+
+  <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-white">
+    <img class="my-0 mr-md-auto" src="assets/logo.jpg" width="70" height="75">
+    <nav class="my-2 my-md-0 mr-md-3">
+      <a class="p-2 text-dark" href="#">Home</a>
+      <a class="p-2 text-dark" href="#">Menu</a>
+      <a class="p-2 text-dark" href="#">About</a>
+      <a class="p-2 text-dark" href="#">Contact</a>
+    </nav>
+  </div>
+
+  <section id="home">
+    <div class="home-container">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h1>Come experience the new at Tai Thai Eatery</h1>
+          </div>
+          <div class="col-md-6">
+            <img src="assets/logo.jpg" alt="" width="100%">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="about">
+    <div class="about-container">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img src="assets/logo.jpg" alt="" width="100%">
+          </div>
+          <div class="col-md-6 about-des-div">
+            <h1 class="header">Who We Are</h1>
+            <p class="about-des-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent lacus augue, scelerisque eget felis non, porttitor hendrerit lacus. Sed tellus tortor, egestas eu iaculis nec, mollis ac nisl. Nulla lorem lorem,
+              cursus et erat sit amet, aliquam mattis nulla. Praesent vehicula dolor elit, quis placerat arcu aliquam at.</p>
+            <a class="btn btn-outline-dark" href="#">Get in Touch</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="top-dish">
+    <div class="top-dish-container">
+      <div class="container">
+        <h1 class="header">Top Dishes</h1>
+        <h5 class="header">The Taste of Thailand</h5>
+        <div class="row">
+          <div class="col-4">
+            <img src="assets/logo.jpg" alt="" width="100%">
+            <div class="top-dish-food1-div">
+              <h3>Tom Yum Soup</h3>
+              <h5>The Perfect Choice</h5>
+            </div>
+          </div>
+          <div class="col-4">
+            <img src="assets/logo.jpg" alt="" width="100%">
+            <div class="top-dish-food2-div">
+              <h3>Spring Roll</h3>
+              <h5>Served All Day</h5>
+            </div>
+          </div>
+          <div class="col-4">
+            <img src="assets/logo.jpg" alt="" width="100%">
+            <div class="top-dish-food3-div">
+              <h3>Steamed Dumpling</h3>
+              <h5>The Perfect Choice</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
   <!-- jQuery -->
