--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Expires" content="0" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Thai Tai Eatery</title>
+  <title>Sweet and Sour</title>
 
   <!-- Google Fonts -->
 
