--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sweet and Sour</title>
 
-  <!-- Google Fonts -->
+  <!-- Google Map -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIwzALxUPNbatRBj3Xi1Uhp0fFzwWNBkE&callback=initMap&libraries=&v=weekly" defer></script>
 
-  <!-- Feather Icon -->
-  <script src="https://unpkg.com/feather-icons"></script>
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -22,13 +23,16 @@
 
 <body>
 
-  <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-white">
-    <img class="my-0 mr-md-auto" src="assets/logo.jpg" width="70" height="75">
+  <div class="home-background"></div>
+
+  <div class="navi-bar d-flex flex-column flex-md-row align-items-center">
+    <!-- <img class="my-0 mr-md-auto" src="assets/logo.jpg" width="70" height="75"> -->
+    <h5 class="my-0 mr-md-auto font-weight-normal">Sweet and Sour</h5>
     <nav class="my-2 my-md-0 mr-md-3">
-      <a class="p-2 text-dark" href="#">Home</a>
-      <a class="p-2 text-dark" href="#">Menu</a>
-      <a class="p-2 text-dark" href="#">About</a>
-      <a class="p-2 text-dark" href="#">Contact</a>
+      <a class="p-3 navi-text" href="#home">Home</a>
+      <a class="p-3 navi-text" href="menu.html">Menu</a>
+      <a class="p-3 navi-text" href="#about">About</a>
+      <a class="p-3 navi-text" href="#contact">Contact</a>
     </nav>
   </div>
 
@@ -36,11 +40,11 @@
     <div class="home-container">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
-            <h1>Come experience the new at Tai Thai Eatery</h1>
-          </div>
-          <div class="col-md-6">
-            <img src="assets/logo.jpg" alt="" width="100%">
+          <div class="col-12">
+            <h1>Come</h1>
+            <h1>experience</h1>
+            <h1>the new at</h1>
+            <h1>Sweet and Sour</h1>
           </div>
         </div>
       </div>
@@ -49,16 +53,16 @@
 
   <section id="about">
     <div class="about-container">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
-          <div class="col-md-6">
-            <img src="assets/logo.jpg" alt="" width="100%">
-          </div>
-          <div class="col-md-6 about-des-div">
-            <h1 class="header">Who We Are</h1>
+          <div class="about-des-div col-12">
+            <h2 class="header">Who We Are</h2>
             <p class="about-des-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent lacus augue, scelerisque eget felis non, porttitor hendrerit lacus. Sed tellus tortor, egestas eu iaculis nec, mollis ac nisl. Nulla lorem lorem,
               cursus et erat sit amet, aliquam mattis nulla. Praesent vehicula dolor elit, quis placerat arcu aliquam at.</p>
-            <a class="btn btn-outline-dark" href="#">Get in Touch</a>
+            <a class="btn about-btn rounded-pill" href="#">Get in Touch</a>
+          </div>
+          <div class="about-pic-div col-12">
+            <img src="https://static.wixstatic.com/media/nsplsh_6c6d6e514a6b356d756d6f~mv2_d_4000_5000_s_4_2.jpg/v1/fill/w_980,h_575,fp_0.50_0.50,q_85,usm_0.66_1.00_0.01/nsplsh_6c6d6e514a6b356d756d6f~mv2_d_4000_5000_s_4_2.webp" alt="" width="100%">
           </div>
         </div>
       </div>
@@ -67,32 +71,87 @@
 
   <section id="top-dish">
     <div class="top-dish-container">
-      <div class="container">
-        <h1 class="header">Top Dishes</h1>
-        <h5 class="header">The Taste of Thailand</h5>
+      <div class="container-fulid">
+        <div class="top-dish-head-div">
+          <h2 class="header">Top Dishes</h2>
+          <h5 class="header">The Taste of Thailand</h5>
+        </div>
+
         <div class="row">
-          <div class="col-4">
-            <img src="assets/logo.jpg" alt="" width="100%">
-            <div class="top-dish-food1-div">
-              <h3>Tom Yum Soup</h3>
-              <h5>The Perfect Choice</h5>
+          <div class="col-md-4">
+            <div class="card top-dish-card">
+              <img src="assets/2.jpg" class="card-img-top" alt="" width="100%">
+              <div class="card-body top-dish-card-body">
+                <h5 class="card-title">Tom Yum Soup</h5>
+                <p class="card-text">The Perfect Choice</p>
+              </div>
             </div>
           </div>
-          <div class="col-4">
-            <img src="assets/logo.jpg" alt="" width="100%">
-            <div class="top-dish-food2-div">
-              <h3>Spring Roll</h3>
-              <h5>Served All Day</h5>
+          <div class="col-md-4">
+            <div class="card top-dish-card">
+              <img src="assets/2.jpg" class="card-img-top" alt="" width="100%">
+              <div class="card-body top-dish-card-body">
+                <h5 class="card-title">Spring Roll</h5>
+                <p class="card-text">Served All Day</p>
+              </div>
             </div>
           </div>
-          <div class="col-4">
-            <img src="assets/logo.jpg" alt="" width="100%">
-            <div class="top-dish-food3-div">
-              <h3>Steamed Dumpling</h3>
-              <h5>The Perfect Choice</h5>
+          <div class="col-md-4">
+            <div class="card top-dish-card">
+              <img src="assets/2.jpg" class="card-img-top" alt="" width="100%">
+              <div class="card-body top-dish-card-body">
+                <h5 class="card-title">Steamed Dumpling</h5>
+                <p class="card-text">The Perfect Choice</p>
+              </div>
             </div>
           </div>
         </div>
+      </div>
+  </section>
+
+  <section id="contact">
+    <div class="contact-container">
+      <div class="container-fluid">
+        <div class="row contact-row">
+          <div class="contact-head-div col-md-6">
+            <h2>Contact</h2>
+          </div>
+          <div class="contact-info-div col-md-6">
+            <p>Tel. 000 000 0000</p>
+          </div>
+        </div>
+        <div class="contact-pic-div row">
+          <img src="assets/2.jpg" alt="" width="100%">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div id="map"></div>
+
+  <section id="hour">
+    <div class="hour-container">
+      <div class="container">
+        <i class="far fa-clock fa-3x"></i>
+        <div class="hour-info-div">
+          <h2>Opening Hours</h2><br><br>
+          <h3>Dine In or Take Away</h3><br><br>
+          <p>Monday - Saturday: 11am - 11pm</p>
+          <p>Sunday: 11am - 7pm</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="footer">
+    <div class="footer-container">
+      <div class="container">
+        <p class="footer-p">
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-instagram"></i>
+        </p>
+        <p>©2020 by Chim</p>
       </div>
     </div>
   </section>
@@ -108,11 +167,6 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
-  <!-- Feather Font -->
-  <script>
-    feather.replace()
-  </script>
 
 </body>
 
