edit contact img height

--- a/menu.html
+++ b/menu.html
@@ -50,7 +50,7 @@
         <hr class="menu-head-hr">
 
         <div class="row starter-row">
-          <div class="col-md-4">
+          <div class="col-md-4 col-6">
             <div class="card menu-card">
               <img src="assets/2.jpg" class="card-img-top menu-card-img top-menu-decor-img" alt="" width="100%">
               <div class="card-body menu-card-body">
@@ -62,7 +62,7 @@
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-4 col-6">
             <div class="card menu-card">
               <img src="assets/2.jpg" class="card-img-top menu-card-img" alt="" width="100%">
               <div class="card-body menu-card-body">
@@ -75,7 +75,7 @@
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-4 col-6">
             <div class="card menu-card">
               <img src="assets/2.jpg" class="card-img-top menu-card-img" alt="" width="100%">
               <div class="card-body menu-card-body">
@@ -88,7 +88,7 @@
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-4 col-6">
             <div class="card menu-card">
               <img src="assets/2.jpg" class="card-img-top menu-card-img" alt="" width="100%">
               <div class="card-body menu-card-body">
@@ -100,7 +100,7 @@
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-4 col-6">
             <div class="card menu-card">
               <img src="assets/2.jpg" class="card-img-top menu-card-img" alt="" width="100%">
               <div class="card-body menu-card-body">
@@ -112,7 +112,7 @@
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-4 col-6">
             <div class="card menu-card">
               <img src="assets/2.jpg" class="card-img-top menu-card-img" alt="" width="100%">
               <div class="card-body menu-card-body">
@@ -133,7 +133,7 @@
         <hr class="menu-head-hr">
 
         <div class="row starter-row">
-          <div class="col-md-4">
+          <div class="col-md-4 col-6">
             <div class="card menu-card">
               <img src="assets/2.jpg" class="card-img-top menu-card-img" alt="" width="100%">
               <div class="card-body menu-card-body">
@@ -145,7 +145,7 @@
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-4 col-6">
             <div class="card menu-card">
               <img src="assets/2.jpg" class="card-img-top menu-card-img" alt="" width="100%">
               <div class="card-body menu-card-body">
@@ -157,7 +157,7 @@
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-4 col-6">
             <div class="card menu-card">
               <img src="assets/2.jpg" class="card-img-top menu-card-img" alt="" width="100%">
               <div class="card-body menu-card-body">
@@ -169,7 +169,7 @@
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-4 col-6">
             <div class="card menu-card">
               <img src="assets/2.jpg" class="card-img-top menu-card-img" alt="" width="100%">
               <div class="card-body menu-card-body">
@@ -181,7 +181,7 @@
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-4 col-6">
             <div class="card menu-card">
               <img src="assets/2.jpg" class="card-img-top menu-card-img" alt="" width="100%">
               <div class="card-body menu-card-body">
@@ -193,7 +193,7 @@
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-4 col-6">
             <div class="card menu-card">
               <img src="assets/2.jpg" class="card-img-top menu-card-img" alt="" width="100%">
               <div class="card-body menu-card-body">
@@ -214,7 +214,7 @@
         <hr class="menu-head-hr">
 
         <div class="row starter-row">
-          <div class="col-md-4">
+          <div class="col-md-4 col-6">
             <div class="card menu-card">
               <img src="assets/2.jpg" class="card-img-top menu-card-img" alt="" width="100%">
               <div class="card-body menu-card-body">
@@ -226,7 +226,7 @@
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-4 col-6">
             <div class="card menu-card">
               <img src="assets/2.jpg" class="card-img-top menu-card-img" alt="" width="100%">
               <div class="card-body menu-card-body">
@@ -238,7 +238,7 @@
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-4 col-6">
             <div class="card menu-card">
               <img src="assets/2.jpg" class="card-img-top menu-card-img" alt="" width="100%">
               <div class="card-body menu-card-body">
